# rypm

./: .gitignore  Cargo.toml  README.md  main.py  mkdocs.yml  pyproject.toml
crates/halo/: Cargo.toml
crates/halo/src/: lib.rs
crates/rypm/: lib.rs
docs/: python.md
python/: rypm.py
python/rye_rp/: __init__.py  __main__.py  _version.py
python/rypm/: __init__.py  __main__.py  _version.py  temp.py
python/tests/: test_halo.py
src/: lib.rs
