[package]
name = "rypm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rypm"
crate-type = ["cdylib"]
path = "crates/rypm/lib.rs"

[dependencies]
halo = { path = "crates/halo" }

pyo3 = "0.21"

[workspace]
members = ["crates/halo"]
