[project]
name = "rye-rp"
version = "0.1.0"
description = "python project structure"
authors = [
    { name = "Sonder Merak", email = "merak19981999@gmail.com" }
]
dependencies = [
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[tool.rye]
managed = true
dev-dependencies = [
    "pip>=23.3.1",
]

[tool.maturin]
python-source = "python"
module-name = "rye_rp._lowlevel"
features = ["pyo3/extension-module"]
