[project]
name = "rypm"
version = "0.1.0"
description = "rye managa python with rust project structure"
authors = [{ name = "Sonder Merak", email = "merak19981999@gmail.com" }]
dependencies = [
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.5.3",
    "mkdocstrings-python>=1.8.0",
    "marimo>=0.1.86",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[tool.rye]
managed = true
dev-dependencies = [
]

[tool.maturin]
python-source = "python"
module-name = "rypm._lowlevel"
features = ["pyo3/extension-module"]

[project.scripts]
hello = "rypm:hello"

[tool.rye.scripts]
docs = "rye run mkdocs build"
rypm = "rye run marimo run python/rypm.py"

[tool.ruff]
extend-select = [
  "B",
  "BLE",
  "C4",
  "E",
  "ERA",
  "I",
  "ICN",
  "INP",
  "ISC",
  "N",
  "NPY",
  "PGH",
  "PIE",
  # "PTH",
  "Q",
  "RET",
  "RSE",
  "RUF",
  "S",
  "SIM",
  "T20",
  "TCH",
  "TID",
  "YTT",
]
ignore = ["E402", "B905", "N818", "S101"]
show-fixes = true
target-version = "py312"
